# devops-study-app

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CLAUDE.md  README.md  main.py  mise.toml  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: backend-build.yaml  backend-tests.yaml  docker-build-push.yaml  frontend-tests.yaml  release-please.yaml
kubernetes/: setup_cluster_local.sh
scripts/: setup  setup_project
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/backend/: main.py  models.py  storage.py
src/backend/tests/: test_main.py
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
src/frontend/src/frontend/templates/: base.html  index.html
src/frontend/tests/: test_main.py
