[project]
name = "study-tracker-backend"
version = "0.1.0"
description = "Backend for the study tracker app"
readme = "README.md"
authors = [
    { name = "Christopher Jelly", email = "christopher.p.jelly@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "uvicorn>=0.34.3",
]

[project.scripts]
study-tracker-api = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]
