[project]
name = "study-tracker-frontend"
version = "0.0.0"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [{ name = "Christopher Jelly", email = "christopher.p.jelly@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "requests>=2.32.3",
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]
